Ajuste colores tiquetes restaurante

--- a/src/app/components/horario-servicio/horario-servicio.component.html
+++ b/src/app/components/horario-servicio/horario-servicio.component.html
@@ -13,7 +13,8 @@
           <div class="col-sm-4 mb-3" *ngIf="infoTarjetas[0]!.estado !== 0">
             <mat-card-header
               style="
-                background-color: #ffe69c;
+                background-color: #25669b;
+                color: white;
                 border-radius: 10px 10px 0px 0px;
               "
             >
@@ -21,7 +22,7 @@
                 <i class="fa-solid fa-ticket fa-2x"></i>
               </div>
               <mat-card-title>Desayuno</mat-card-title>
-              <mat-card-subtitle>usco</mat-card-subtitle>
+              <mat-card-subtitle class="text-white">USCO</mat-card-subtitle>
             </mat-card-header>
             <mat-card class="card bg-light">
               <div class="row pt-1">
@@ -125,7 +126,8 @@
           <div class="col-sm-4 mb-3" *ngIf="infoTarjetas[1]!.estado !== 0">
             <mat-card-header
               style="
-                background-color: #9ec5fe;
+                background-color: #8f141b;
+                color: white;
                 border-radius: 10px 10px 0px 0px;
               "
             >
@@ -133,7 +135,7 @@
                 <i class="fa-solid fa-ticket fa-2x"></i>
               </div>
               <mat-card-title>Almuerzo</mat-card-title>
-              <mat-card-subtitle>usco</mat-card-subtitle>
+              <mat-card-subtitle class="text-white">USCO</mat-card-subtitle>
             </mat-card-header>
             <mat-card class="card bg-light">
               <div class="row pt-1">
@@ -236,7 +238,8 @@
           <div class="col-sm-4 mb-3" *ngIf="infoTarjetas[2]!.estado !== 0">
             <mat-card-header
               style="
-                background-color: #c5b3e6;
+                background-color: #7c0b69;
+                color: white;
                 border-radius: 10px 10px 0px 0px;
               "
             >
@@ -244,7 +247,7 @@
                 <i class="fa-solid fa-ticket fa-2x"></i>
               </div>
               <mat-card-title>Cena</mat-card-title>
-              <mat-card-subtitle>usco</mat-card-subtitle>
+              <mat-card-subtitle class="text-white">USCO</mat-card-subtitle>
             </mat-card-header>
             <mat-card class="card bg-light">
               <div class="row pt-1">
